# tipsterbyte_fx_pyhon

./: .flake8  .markdownlint.json  REVIEW__README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  README.md  alembic.ini  main_init_scripts.py  main_init_web_server.py  manage.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 507e61d06533_auto_migration_20250804_021059.py  5702f8cbded0_initial_auth_tables.py  66a003ca3a2f_auto_migration_20250822_101327.py  9edb6a2d5537_initial_auth_tables.py
backend/app/core/: logger.py  secrets.py
backend/app/db/: init_db.py  mongo_init.py
backend/app/db/models/: models.py
backend/apps/common/db/: base.py
backend/apps/leagues_manager/application/: job_runner_application.py  runner_leagues_manager.py
backend/core/: config.py  logger.py  middleware.py  paths.py  secrets.py  telemetry.py
backend/core/db/: base_class.py  database_sql.py  init_sql_all_models.py
backend/core/db/sql/: database_sql.py  (+1 more)
backend/core/enums/: enums_process_status.py
backend/core/routes/: scheduler_routes.py  system_routes.py
backend/core/scheduler/: __init__.py  jobs_loader.py  utils.py
backend/core/services/: scheduler_service.py
backend/docs/: README_DOCS.md
backend/scripts/db/: mongo_state_manager.py  sql_state_manager.py
bodega_src/db/: mongo_init_db_DEPRECATED.py  sql_init_db_DEPRECATED.py
bodega_src/tasks/: process_rastreo_data_fuentes_deportivas_task_old.py
procedimientos_base/: conf-entorno-local.md  entrenamientos_linea_base.md  linea_base.md  proc-docker-general.md  readme-icons.md
(+87 files in other folders)
